--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="A product of emergent.sh" />
+    <meta name="description" content="OTOPIA Car Wash POS System" />
     <!--
         manifest.json provides metadata used when your web app is installed on a
         user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,11 +26,6 @@
     <script>
         // Only load visual edit scripts when inside an iframe
         if (window.self !== window.top) {
-            // Load debug monitor script
-            var debugMonitorScript = document.createElement('script');
-            debugMonitorScript.src = 'https://assets.emergent.sh/scripts/debug-monitor.js';
-            document.head.appendChild(debugMonitorScript);
-
             // Configure Tailwind
             window.tailwind = window.tailwind || {};
             tailwind.config = {
